--- a/index.html
+++ b/index.html
@@ -13,15 +13,20 @@
 
         body {
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+            background: #000; /* Cambiado para el letterboxing */
             color: #333;
             overflow: hidden;
+            display: flex; /* Añadido para centrar */
+            justify-content: center; /* Añadido para centrar */
+            align-items: center; /* Añadido para centrar */
         }
 
         .presentation-container {
-            width: 100vw;
-            height: 100vh;
-            position: relative;
+            width: 1600px; /* Ancho base para proporción 2:1 */
+            height: 800px; /* Alto base para proporción 2:1 */
+            position: relative; /* Asegura el contexto de posicionamiento */
+            transform-origin: center center; /* Escala desde el centro */
+            /* El script añadirá la propiedad 'transform: scale(...)' */
         }
 
         .slide {
