--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
         }
 
         .presentation-container {
-            width: 100%; /* Ancho base para proporción 2:1 */
-            height: 100%; /* Alto base para proporción 2:1 */
+            width: 992px; /* Ancho base para proporción 992:480 */
+            height: 480px; /* Alto base para proporción 992:480 */
             position: relative; /* Asegura el contexto de posicionamiento */
             transform-origin: center center; /* Escala desde el centro */
             /* El script añadirá la propiedad 'transform: scale(...)' */
