--- a/index.html
+++ b/index.html
@@ -13,20 +13,15 @@
 
         body {
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            background: #000; /* Cambiado para el letterboxing */
+            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
             color: #333;
             overflow: hidden;
-            display: flex; /* Añadido para centrar */
-            justify-content: center; /* Añadido para centrar */
-            align-items: center; /* Añadido para centrar */
         }
 
         .presentation-container {
-            width: 992px; /* Ancho base para proporción 992:480 */
-            height: 480px; /* Alto base para proporción 992:480 */
-            position: relative; /* Asegura el contexto de posicionamiento */
-            transform-origin: center center; /* Escala desde el centro */
-            /* El script añadirá la propiedad 'transform: scale(...)' */
+            width: 100vw;
+            height: 100vh;
+            position: relative;
         }
 
         .slide {
